# HipGPT

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate.cpp  gpt_model.cpp  gpt_model.h  hip_kernels.cpp  hip_kernels.h  preprocess.py  tokenizer.cpp  tokenizer.h  train_gpt.cpp  transformer_layer.cpp  transformer_layer.h
include/: gpt_model.h  hip_kernels.h  tokenizer.h  transformer_layer.h
scripts/: download_data.sh  download_wikitext.sh  generate.sh  plot_training.py  run_generate.sh  run_train.sh
src/: generate.cpp  gpt_model.cpp  hip_kernels.cpp  tokenizer.cpp  train_gpt.cpp  transformer_layer.cpp
utils/: tokenizer.cpp
